[gd_scene load_steps=2 format=3 uid="uid://1dmf7fn0mqwk"]

[ext_resource type="Script" uid="uid://ccbig4exccf18" path="res://ScriptsGenerales/user_login.gd" id="1_fsxsa"]

[node name="UserLogin" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_fsxsa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -11.775
anchor_top = -2.375
anchor_right = -11.775
anchor_bottom = -2.375
offset_left = 995.0
offset_top = 537.0
offset_right = 1450.0
offset_bottom = 642.0
scale = Vector2(2.09852, 2.18623)
metadata/_edit_use_anchors_ = true

[node name="UserName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ingresa tu Nombre de Usuario"
horizontal_alignment = 1

[node name="name_input" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="connect_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Aceptar"

[connection signal="pressed" from="VBoxContainer/connect_button" to="." method="_on_connect_button_pressed"]
